--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>CCTV Shoppee</title>
   <link rel="stylesheet" href="https://html.storebuild.shop/shofy-prv/shofy/assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://html.storebuild.shop/shofy-prv/shofy/assets/css/animate.css">
   <link rel="stylesheet" href="https://html.storebuild.shop/shofy-prv/shofy/assets/css/swiper-bundle.css">
